--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react-router-redux": "4.0.7",
     "redux": "3.6.0",
     "redux-logger": "^2.8.1",
-    "redux-thunk": "2.1.0"
+    "redux-thunk": "2.1.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^2.5.0"
   },
   "devDependencies": {
     "autoprefixer": "6.5.4",
@@ -88,6 +90,7 @@
     "sass-loader": "4.1.0",
     "sinon": "^1.17.7",
     "style-loader": "0.13.1",
+    "stylus-loader": "2.5.0",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
     "webpack-bundle-analyzer": "2.1.1",
