--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "cheerio": "^0.22.0",
     "classnames": "^2.2.5",
     "lodash": "4.17.4",
     "object-assign": "4.1.0",
