--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react-router-redux": "4.0.7",
     "redux": "3.6.0",
     "redux-logger": "^2.8.1",
-    "redux-thunk": "2.1.0",
+    "redux-thunk": "^2.2.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.5.0"
   },
