--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "cheerio": "^0.22.0",
     "classnames": "^2.2.5",
-    "lodash": "4.17.4",
+    "lodash": "^4.17.4",
     "object-assign": "4.1.0",
     "pubsub-js": "^1.5.4",
     "react": "15.4.1",
