--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "redux": "3.6.0",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
+    "stylint": "^1.5.9",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.5.0"
   },
