--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-redux": "5.0.1",
     "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
+    "react-scroll": "^1.5.2",
     "redux": "3.6.0",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
