--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "redux": "3.6.0",
     "redux-logger": "^2.8.1",
     "redux-thunk": "^2.2.0",
+    "styled-components": "2.2.3",
     "stylint": "^1.5.9",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.5.0"
